--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -7,12 +7,12 @@
         <div class="nav"> 
             <div class="navHeader">
                 <div class="navBadge">
-                    <a href="../Administrador/EditarPerfil.xhtml" >
-                        <h:graphicImage url="#{usuarioBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
+                    <a href="../Usuario/EditarPerfil.xhtml" >
+                        <h:graphicImage url="#{usuarioLogueadoBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
                     </a> 
                 </div>
                 <div class="navLabel">
-                    <h:outputText value="#{usuarioBean.nombreUsuario}"/>
+                    <h:outputText value="#{usuarioLogueadoBean.nombreUsuario}"/>
                 </div>
                 <div class="navLabel">
                     (Administrador)
