--- a/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
+++ b/ProyectoTISJ-war/web/Docente/DocenteMenu.xhtml
@@ -6,7 +6,9 @@
     <div class="nav"> 
         <div class="navHeader">
             <div class="navBadge">
-                <h:graphicImage url="#{usuarioBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
+                <a href="../Usuario/EditarPerfil.xhtml" >
+                    <h:graphicImage url="#{usuarioBean.imagenUsuario}" width="100%" height="100%" style="max-width:500px"/>
+                </a>
             </div>
             <div class="navLabel">
                 <h:outputText value="#{usuarioBean.nombreUsuario}"/>
