--- a/ProyectoTISJ-war/web/Usuario/EditarPerfil.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/EditarPerfil.xhtml
@@ -57,7 +57,7 @@
                         <h:inputFile value="#{usuarioLogueadoBean.partImagenUsuario}" required="false" p:accept="image/*" class="boton subirImagen"/>
                     </div>   
                 </div>
-                <h:panelGroup rendered="#{login.rolSeleccionado == 'Docente'}">
+                <h:panelGroup rendered="#{login.rolSeleccionado == 'Estudiante'}">
                     <div class="menuOpcion">
                         <div class="imagenMenuOpcion" rendered=""> 
                             <img src="../Resources/Images/imagen.png" width="100" height="100" style="margin-top: 50px;" id="ImagenSubida"/>
