Se agrego el caso de uso de listar y registrar Asignatura:  - Se creo facade  - Se crearon los beans correspondientes para la interfaz web.  - Se agregaron los links correspondientes en menu de admininstrador y administrativo.

--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -33,7 +33,7 @@
             </a>
             
             <div class="navDivider"></div>
-            <a href="">
+            <a href="../Asignatura/ListarAsignaturas.xhtml">
                 <div class="navOptMenu">
                     Asignaturas
                 </div>
