--- a/ProyectoTISJ-war/web/Docente/ListarDocentes.xhtml
+++ b/ProyectoTISJ-war/web/Docente/ListarDocentes.xhtml
@@ -4,44 +4,53 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
     <ui:define name="page_content">
-        <c:forEach var="docente" items="#{docenteListadoBean.docentes}">
-            <div class="docente">
-                <div class="nombreDocente"><h:outputText value="#{docente.nombreUsuario}"/></div>
-                <div class="imagenDocente" style="background-image: url('#{docente.imagenURL}')" >
-                    <div class="optionContainer">
-                        <div class="optionButton">
-                            <div class="optButtonImagen">
-                                <img src="../Resources/Images/edit.png" width="48" height="48" alt="edit"/>
-                            </div>
-                            <div class="optButtonTexto">
-                                Editar
+        <div id="contenedor" style="margin-top: 120px">
+            <c:forEach var="docente" items="#{docenteListadoBean.docentes}">
+                <div class="ListItemContainer" >
+                    <div class="ListItem" >
+                        <div class="item" >
+                            <div class="ImagenItem">
+                                <img src="#{docente.imagenURL}" height="100%" width="100%"/>
                             </div>
                         </div>
-                        <div class="optionButton">
-                            <div class="optButtonImagen">
-                                <img src="../Resources/Images/delete.png" width="48" height="48" alt="edit"/>
-                            </div>
-                            <div class="optButtonTexto">
-                                Eliminar
-                            </div>
+                        <div class="item">
+                            #{docente.cedulaUsuario}
                         </div>
+                        <div class="item">
+                            #{docente.nombreCompleto}
+                        </div>
+                        <div class="item">
+                            #{docente.correoUsuario}
+                        </div>
+                        <div class="optionItem" style="background-image: url(ListarDocentes_files/delete.png)"></div>
+                        <div class="optionItem" style="background-image: url(ListarDocentes_files/edit.png)"></div>
                     </div>
+                    <div class="columna">
+                        <div class="negrita">Nombre: </div> #{docente.nombreUsuario}<br/>
+                        <div class="negrita">Apellido: </div> #{docente.apellidoUsuario}<br/>
+                        <div class="negrita">Cedula: </div> #{docente.cedulaUsuario}<br/>
+                        <div class="negrita">Credencial: </div> #{docente.credencialCivicaUsuario}<br/>
+                        <div class="negrita">Correo: </div> #{docente.correoUsuario}<br/>
+                        <div class="negrita">Departamento: </div> #{docente.departamentoUsuario}<br/>
+                        <div class="negrita">Localidad: </div> #{docente.localidadUsuario}<br/>
+                        <div class="negrita">Domicilo: </div>#{docente.domicilioUsuario}<br/>
+                        <div class="negrita">Telefono: </div> #{docente.telefonoUsuario}<br/>
+                        <div class="negrita">Celular: </div> #{docente.celularUsuario} <br/>
+                        <div class="negrita">Fecha de Nacimiento: </div> #{docente.fechaNacimientoUsuario} <br/>
+                        <div class="negrita">Lugar de Nacimiento: </div> lugar <br/>
+                        <div class="negrita">Estado Civil: </div> #{docente.estadoCivilUsuario} <br/>
+                        <div class="negrita">Sexo: </div> #{docente.sexoUsuario} <br/>
+                        <div class="negrita">Cursos Dictados: </div> Arquitectura del Computador, Matematica Discreta y Logica 1, Matematica Discreta y Logica 2<br/>
+                    </div>
+                </div>            
+            </c:forEach>
+            <div class="ListItemContainer" style="background-color: #37474F; text-align: center; ">
+                <a href="../Usuario/RegistrarUsuario.xhtml?rol=Docente">
+                <div class="ImagenItem" style="margin: 0 auto; margin-top: 5px; border: none; box-shadow: none">
+                    <img src="../Resources/Images/add.png" height="100%" width="100%"/>
                 </div>
-                <div class="asignaturaContainer"> 
-                    <div class="nombreAsignatura">Arquitectura del Computador</div>
-                    <div class="nombreAsignatura">Matematica dicreta y logica 1</div>
-                    <div class="nombreAsignatura">Matematica dicreta y logica 1</div>
-                    <div class="nombreAsignatura">Matematica dicreta y logica 1</div>
-                </div>
+                </a>
             </div>
-        </c:forEach>
-        <div class="docente">
-            <div class="nombreDocente">Registrar Docente</div>
-            <a href="../Usuario/RegistrarUsuario.xhtml?rol=Docente">
-                <div class="addContainer"> 
-                    <h:graphicImage url="../Resources/Images/add.png" id="add"/> 
-                </div>
-            </a>
         </div>
     </ui:define>
 </ui:composition>
