Se crearon llos beans y paginas respectivas para listar y registrar estudiante y asignatura. Se quito de estudiante el atriuto de lugar de nacimiento que pertenecia a usuario. Se cambio el acceso a los atributos de usuario de protected a private.

--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -26,7 +26,7 @@
             </a>
             
             <div class="navDivider"></div>
-            <a href="">
+            <a href="../Estudiante/ListarEstudiantes.xhtml">
                 <div class="navOptMenu">
                     Estudiantes
                 </div>
