--- a/ProyectoTISJ-war/web/login.xhtml
+++ b/ProyectoTISJ-war/web/login.xhtml
@@ -4,35 +4,26 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core" >
     <h:head>
-        <title>Facelet Title</title>        
+        <link rel="stylesheet" href="./Resources/CSS/Base.css" />
+        <title>Login</title>        
     </h:head>
     <h:body>
-        <div style="font-family: sans-serif; font-size: 14px; color: #ffffff; background-color: #37474F;">
-            <h:form style="text-align: center" rendered="#{!login.usuarioLogueado}">
-                <table border="1" cellspacing="2" cellpadding="1">
-                    <tbody>
-                        <tr>
-                            <td><h:outputText value="Usuario:"/></td>
-                            <td><h:inputText style="width: 98%; background-color: transparent; color: #ffffff;" label="Usuario" value="#{login.usuario}" 
-                                             required="true" requiredMessage="Falta ingresar Nickname."/></td>
-                        </tr>
-                        <tr>
-                            <td><h:outputText value="Password:"/></td>
-                            <td><h:inputSecret style="width: 98%;background-color: transparent; color: #ffffff" label="Password" id="Password" value="#{login.password}" 
-                                               required="true" requiredMessage="Falta ingresar Password."/></td>
-                        </tr>
-                        <tr>
+        <div class="barraGris">
+        <h:form style="text-align: center" rendered="#{!login.usuarioLogueado}">
+            <div class="loginContainer">
+                <h:inputText value="#{login.usuario}" p:placeholder="Cedula"/>
+                <h:inputSecret value="#{login.password}" p:placeholder="Cedula"/><br/>
+                
                             <td>Rol</td>
                             <td><h:selectOneRadio value="#{login.rolSeleccionado}">
                                     <f:selectItems value="#{login.roles}"/>                                    
                                 </h:selectOneRadio></td>
-                        </tr>
-                    </tbody>
-                </table>                
+            
                 <h:panelGroup style="display:block; text-align:center">
                     <h:commandButton type="submit" value="Ingresar" action="#{login.login()}"/>
-                </h:panelGroup>    
-            </h:form>
+                </h:panelGroup> 
+            </div>
+        </h:form>
         </div>
         <div>
             <h:form rendered="#{login.usuarioLogueado}">
