Se genero bean y pagina genericos para listar usuarios.

--- a/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
+++ b/ProyectoTISJ-war/web/Administrador/AdministradorMenu.xhtml
@@ -19,14 +19,14 @@
                 </div>
             </div>
             <div class="navDivider"></div>
-            <a href="../Docente/ListarDocentes.xhtml">
+            <a href="../Usuario/ListarUsuarios.xhtml?rol=Docente">
                 <div class="navOptMenu">
                     Docente
                 </div>
             </a>
             
             <div class="navDivider"></div>
-            <a href="../Estudiante/ListarEstudiantes.xhtml">
+            <a href="../Usuario/ListarUsuarios.xhtml?rol=Estudiante">
                 <div class="navOptMenu">
                     Estudiantes
                 </div>
