Se corrigio error en insercion de nuevo docente donde se inserta duplciado.

--- a/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
@@ -28,8 +28,8 @@
                         <div class="item">
                             #{usuario.correoUsuario}
                         </div>
-                        <div class="optionItem" style="background-image: url(ListarDocentes_files/delete.png)"></div>
-                        <div class="optionItem" style="background-image: url(ListarDocentes_files/edit.png)"></div>
+                        <div class="optionItem" style="background-image: url(../Resources/Images/delete.png)"></div>
+                        <div class="optionItem" style="background-image: url(../Resources/Images/edit.png)"></div>
                     </div>
                     <div class="columna">
                         <div class="negrita">Nombre: </div> #{usuario.nombreUsuario}<br/>
