Se corrigio nuevo error que creaba docentes duplicados cada vez que se registraba uno nuevo. El problema era generado por un commandLink con type submit Reigstrar, ahora se quito type.

--- a/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/RegistrarUsuario.xhtml
@@ -122,12 +122,9 @@
                     </div>
                 </h:panelGroup>
                 <div class="menuOpcion" style="display: block;">
-                    <h:commandLink type="submit" action="#{datosUsuarioBean.registrarUsuario()}">
+                    <h:commandLink action="#{datosUsuarioBean.registrarUsuario()}">
                         <div class="boton "> <img src="../Resources/Images/siguiente.png" class="butonIcon"/> Registrar</div>
                     </h:commandLink>
-                    <h:commandButton type="submit" action="#{datosUsuarioBean.registrarUsuario()}">
-                        <div class="boton "> <img src="../Resources/Images/siguiente.png" class="butonIcon"/> Registrar</div>
-                    </h:commandButton>
                     <h:commandButton type="reset">
                         <div class="boton "> <img src="../Resources/Images/reset.png" class="butonIcon"/> Reset </div>
                     </h:commandButton>
