--- a/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
+++ b/ProyectoTISJ-war/web/Usuario/ListarUsuarios.xhtml
@@ -7,7 +7,7 @@
     <ui:define name="page_content">
         <div class="cabecera" >
             <div class="titulo" >
-                Listado de #{usuarioListadoBean.rol} Registrados
+                Listado de #{usuarioListadoBean.rol}s Registrados
             </div>
         </div>
         <div id="contenedor" style="margin-top: 120px">
