Se comenzo con la implemntacion de registro de estudiante con los estudios cursados.

--- a/ProyectoTISJ-war/web/Asignatura/ListarAsignaturas.xhtml
+++ b/ProyectoTISJ-war/web/Asignatura/ListarAsignaturas.xhtml
@@ -34,7 +34,7 @@
             <div class="ListItemContainer" style="background-color: #37474F; text-align: center; ">
                 <a href="../Asignatura/RegistrarAsignatura.xhtml">
                 <div class="ImagenItem" style="margin: 0 auto; margin-top: 5px; border: none; box-shadow: none">
-                    <img src="../Resources/Images/add.png" height="100%" width="100%"/>
+                    <img src="../Resources/Images/addOtros.png" height="100%" width="100%"/>
                 </div>
                 </a>
             </div>
